--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <title>Unit 0 - Practice</title>
     <style>
       h1 {
-        color: blue;
+        color: rgb(119, 158, 122);
       }
       p {
-        background-color: aliceblue;
+        background-color: rgb(220, 252, 223);
       }
     </style>
   </head>
 
   <body>
-    <h1>All About Me - MY PAGE</h1>
+    <h1>All About Me  ★  MY PAGE !</h1>
 
-    <p>I prefer to be called XXXXX</p>
-    <p>I was born in XXXXX</p>
-    <p>The last thing I ate was XXXXX</p>
+    <p>I prefer to be called Jun</p>
+    <p>I was born in 2008</p>
+    <p>The last thing I ate was a breakfast wrap</p>
+    <p>I am a Lin Lie enthusiast</p>
+    <p>I really like the color green (if you couldn't tell)</p>
 
     <img src="2025 - GC Banner.jpg" width="100%" />
   </body>
